# python-project-52

./: .codeclimate.yml  .coverage  .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  railway.yml  requirements.txt
.github/workflows/: python-app.yml
labels/: tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
locale/ru/LC_MESSAGES/: django.po
staticfiles/: staticfiles.json
statuses/: tests.py  views.py
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/task_manager/: admin.py  forms.py  settings.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
tasks/: forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_remove_task_assignee_task_executor.py
templates/labels/: label_create.html  label_delete.html  label_update.html  labels.html
templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses.html
templates/task_manager/: bar.html  index.html  index_draft.html  layout.html  login.html
templates/tasks/: task_create.html  task_delete.html  task_detail.html  task_update.html  tasks.html
templates/users/: delete_user.html  register.html  update_user.html  users.html
users/: forms.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+25 files in other folders)
